--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,128 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* ##### general ##### */
+* {
+	box-sizing: border-box;
+}
+main {
+	padding: 0 2rem;
+}
+
+/* ##### Search ##### */
+header {
+	background: #3498db;
+	margin-bottom: 2rem;
+}
+
+input[type='text'] {
+	margin: .5rem .5rem;
+	background: #fff;
+	font-size: 1rem;
+	border: none;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+	border-radius: 9px;
+	padding: 0 2rem;
+	width: calc(100% - 1rem);
+	height: 2.5rem;
+}
+
+/* ##### NamesList ##### */
+tr {
+	padding: 0;
+	table-layout: fixed;
+}
+th {
+	position: left;
+	list-style: none;
+	padding: 0.25rem 0.75rem;
+	margin: 2px;
+	border-radius: 3px;
+	table-layout: fixed;
+}
+td:hover {
+	position: left;
+	cursor: pointer;
+	background-color: #ddd;
+	table-layout: fixed;
+
+}
+
+/* ##### Columns ##### */
+.column1 {
+	float: left;
+	width: 40%;
+	padding: .1rem 1rem;
+	margin: 1px;
+	
+}
+.column2 {
+	float: right;
+	width: 50%;
+	background-color: #ccdef9;
+	padding: 1rem 1.3rem;
+	
+	margin: 9px;
+}
+.column3 {
+	float: right;
+	width: 50%;
+	padding: .5rem 1.5rem;
+	
+	margin: 9px;
+	
+	background-color: #e745e75b;
+}
+
+/* ##### Rows ##### */
+.row {
+	margin: 1rem;
+	table-layout: fixed;
+}
+
+.row:after {
+	padding: 1 0rem;
+	content: '';
+	display: table;
+	clear: both;
+	table-layout: fixed;
+}
+
+.tableWrapper {
+	max-height: 800px;
+	overflow: auto;
+	scroll-behavior: smooth;
+	table-layout: fixed;
+}
+
+/* ##### Footer ##### */
+.credit {
+	padding: 1rem 0;
+	color: #b3b3b3;
+}
+.credit a {
+	color: #3498bb;
+}
+.btn {	
+	background: #ddd;
+	color: #000000;
+	padding: 1rem 5rem;
+	font-size: 0.8rem;
+	border: solid 1px #c7c7c7;
+	margin: .05rem 4rem;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+	border-radius: 12px;
+	
+}
+.btn:hover {
+	background: #37cfbba2;
+}
+ul
+{
+	margin: 0rem 0rem;
+
 }
